# vex-unified

./: README.md  cabal.project  vex-unified.cabal  vext.cabal
src/: Array.hsig  Core.hs  Element.hsig  Slice.hs  Vector.hs
src-imp/: Array.hs  ByteArray.hs  Lifted.hs  Unlifted.hs  Word16.hs  Word8.hs
src-indef/: Core.hs  Element.hsig  Vector.hs
src-internal/: ConstByteArray.hs  Internal.hs  PrimArray.hs
src-internal/Data/Text/Short/: Unlifted.hs
src-pair-indef/: Array.hs  ArrayA.hsig  ArrayB.hsig  Element.hs  ElementA.hsig  ElementB.hsig  Tuple.hs
src/Vex/Sized/: Vector.hs
