cabal-version: 2.2
name: vex-unified
version: 0.1.0.0
-- synopsis:
-- description:
bug-reports: https://github.com/andrewthad/vex-unified/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library internal
  exposed-modules:
    Internal 
    ConstByteArray
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends:
    , base >=4.12.0.0 && <5
  hs-source-dirs: src-internal

library indef
  exposed-modules:
    Vector
    Slice
    Core
  signatures:
    Element
    Array
  build-depends:
    , base >=4.12.0.0 && <5
    , internal
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library prim-indef
  reexported-modules: Vector
  signatures: Element
  build-depends:
    , base >=4.12.0.0 && <5
    , indef
    , internal
  hs-source-dirs: src-prim-indef
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  mixins:
    indef (Vector as Vector) requires (Array as ConstByteArray, Element),

library imp
  exposed-modules:
    Word8
    ByteArray
    Array
    Unlifted
  build-depends:
    , base >=4.12.0.0 && <5
    , internal
    , primitive >=0.7
  hs-source-dirs: src-imp
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library
  reexported-modules:
    Vector.Word8
  build-depends:
    , imp
    , prim-indef
    , indef
    , primitive >=0.7
  mixins:
    prim-indef (Vector as Vector.Word8) requires (Element as Word8),
    indef (Vector as Vector.Lifted) requires (Element as Array, Array as Array),
    indef (Vector as Vector.Unlifted) requires (Element as Unlifted, Array as Unlifted),
