cabal-version: 3.4
name: vext
version: 0.1.0.0
bug-reports: https://github.com/andrewthad/vex-unified/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library indef
  exposed-modules:
    Vector
  other-modules:
    Core
  signatures:
    Element
  build-depends:
    , base >=4.12.0.0 && <5
    , natural-arithmetic
    , unlifted
  hs-source-dirs: src-indef
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library imp
  exposed-modules:
    Word8
    Word16
    Lifted
    Unlifted
  build-depends:
    , base >=4.12.0.0 && <5
    , primitive >=0.7
    , unlifted
  hs-source-dirs: src-imp
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library inst
  default-language: Haskell2010
  reexported-modules:
    , Vector.Std.Lifted
    , Vector.Std.Word8
    , Vector.Std.Word16
    , Vector.Std.Unlifted
  build-depends:
    , vext:imp
    , vext:indef
    , primitive >=0.7
  mixins:
    vext:indef (Vector as Vector.Std.Word8) requires (Element as Word8),
    vext:indef (Vector as Vector.Std.Word16) requires (Element as Word16),
    vext:indef (Vector as Vector.Std.Lifted) requires (Element as Lifted),
    vext:indef (Vector as Vector.Std.Unlifted) requires (Element as Unlifted),

library pair-indef
  exposed-modules:
    Element
  signatures:
    ElementA
    ElementB
  build-depends:
    , base >=4.12.0.0 && <5
  hs-source-dirs: src-pair-indef
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library pair-array-inst
  default-language: Haskell2010
  reexported-modules:
    , Element.Pair.Lifted.Word8
    , Element.Pair.Word8.Word8
  build-depends:
    , vext:inst
    , vext:pair-indef
  mixins:
    vext:pair-indef (Element as Element.Pair.Lifted.Word8) requires
      (ElementA as Lifted, ElementB as Word8),
    vext:pair-indef (Element as Element.Pair.Word8.Word8) requires
      (ElementA as Word8, ElementB as Word8),

library pair-inst
  default-language: Haskell2010
  reexported-modules:
    , Vector.Pair.Word8.Lifted
    , Vector.Pair.Word8.Word8
  build-depends:
    , vext:pair-array-inst
    , vext:indef
  mixins:
    vext:indef (Vector as Vector.Pair.Word8.Lifted) requires
      (Element as Element.Pair.Lifted.Word8),
    vext:indef (Vector as Vector.Pair.Word8.Word8) requires
      (Element as Element.Pair.Word8.Word8),

library
  default-language: Haskell2010
  reexported-modules:
    , Vector.Std.Lifted
    , Vector.Std.Word8
    , Vector.Std.Word16
    , Vector.Std.Unlifted
    , Vector.Pair.Word8.Lifted
    , Vector.Pair.Word8.Word8
  build-depends:
    , vext:inst
    , vext:pair-inst
